Update some endpoints to add more data to fit it to the UI prototype better
