# api/routes/v1.php
@@ -27,8 +27,9 @@ Flight::route('GET /api/v1/events/@eventID/announcements',  [AnnouncementsContro
 Flight::route('GET /api/v1/events/@eventID/roster',         [RosterController::class, 'index']);
 Flight::route('GET /api/v1/events/@eventID/rules',          [RulesController::class, 'index']);
 Flight::route('GET /api/v1/events/@eventID/rules/@rulesID', [RulesController::class, 'show']);
-Flight::route('GET /api/v1/events/@eventID/tournaments',                 [TournamentsController::class, 'index']);
-Flight::route('GET /api/v1/events/@eventID/tournaments/@tournamentID',   [TournamentsController::class, 'show']);
+Flight::route('GET /api/v1/events/@eventID/tournaments',                        [TournamentsController::class, 'index']);
+Flight::route('GET /api/v1/events/@eventID/tournaments/@tournamentID',          [TournamentsController::class, 'show']);
+Flight::route('GET /api/v1/events/@eventID/tournaments/@tournamentID/roster',   [TournamentsController::class, 'roster']);
 Flight::route('GET /api/v1/events/@eventID/workshops',            [WorkshopsController::class, 'index']);
 Flight::route('GET /api/v1/events/@eventID/workshops/@blockID',   [WorkshopsController::class, 'show']);
 Flight::route('GET /api/v1/events/@eventID/schedules/main',                  [SchedulesController::class, 'mainAll']);
